samples/_failures_safe/1761466557_da5a67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_309e7c45.c: In function ‘main’:
./samples/SAFE/__tmp_309e7c45.c:167:5: error: expected declaration or statement at end of input
  167 |     }
      |     ^
